--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "wiki-cat-tree",
-  "version": "1.0.0",
-  "description": "Server/client for searching enwiki data dumps in Oracle.",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "test"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/danieldekerlegand/wiki-cat-tree.git"
-  },
-  "author": "Daniel DeKerlegand",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danieldekerlegand/wiki-cat-tree/issues"
-  },
-  "homepage": "https://github.com/danieldekerlegand/wiki-cat-tree#readme",
   "dependencies": {
-    "express": "^4.14.1"
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "hbs": "~4.0.1",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2"
   }
 }
